@@ -29,7 +29,7 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import org.hamcrest.Matchers;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.Page;
@@ -188,7 +188,7 @@ public class DirectlyModifiableViewTest {
         WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
         WebRequest req = new WebRequest(
-                new URL(j.jenkins.getRootUrl() + view.getUrl() + path),
+                new URI(j.jenkins.getRootUrl() + view.getUrl() + path).toURL(),
                 HttpMethod.POST
         );
 
